--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                 </a>
 
-                <a href="Cart.html" class="CartContainer">
+                <a href="cart.html" class="CartContainer">
 
                     <div class="CartIcon">
             
